# numcodecs-zero

./: .gitignore  README.md  mkdocs.yml  perf.py  pyproject.toml
.github/workflows/: ci.yml
docs/: generate_api.py  index.md  requirements.txt
src/numcodecs_combinators/: __init__.py  stack.py
src/numcodecs_combinators/observers/: __init__.py  abc.py  bytesize.py  walltime.py
tests/: test_stack.py
