[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "numcodecs-combinators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "numcodecs~=0.13",
    "numpy~=2.2",
]

[dependency-groups]
dev = [
    "pytest~=8.3",
]
